test/scc/expr/semantic-errors/116.t
void test()
{
    struct
    {
        int a;
    } b = { { { 0 } } };
}